intermediate revision - tweaking archaic .Net to be able to work with ElasticSearch of a later time, challenge with TLS cyphers observed - unfinished